--- a/templates/home/aboutus.html.twig
+++ b/templates/home/aboutus.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
-{% block title %}Skills Farm{% endblock %}
+{% block title %}Skillsfarm{% endblock %}
 {% block body %}
     <!--Breadcrumb Banner Area Start-->
     <div class="breadcrumb-banner-area pt-94 pb-85 bg-3">
@@ -67,7 +67,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="single-team">
                         <div class="team-img">
-                            <img src="images/team/1.jpg" alt="jobhere">
+                            <img src="/img/default.jpg" alt="jobhere">
                         </div>
                         <div class="team-content">
                             <h5>Shyju Nair</h5>
@@ -80,7 +80,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="single-team">
                         <div class="team-img">
-                            <img src="images/team/2.jpg" alt="jobhere">
+                            <img src="/img/default.jpg" alt="jobhere">
                         </div>
                         <div class="team-content">
                             <h5>JAYAN VARGHESE</h5>
@@ -93,10 +93,10 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="single-team">
                         <div class="team-img">
-                            <img src="images/team/3.jpg" alt="jobhere">
+                            <img src="/img/default.jpg" alt="jobhere">
                         </div>
                         <div class="team-content">
-                            <h5>JEO VARGHESE</h5>
+                            <h5>GEO VARGHESE</h5>
                             <h6>CTO</h6>
                         </div>
                     </div>
@@ -106,7 +106,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="single-team">
                         <div class="team-img">
-                            <img src="images/team/4.jpg" alt="jobhere">
+                            <img src="/img/default.jpg" alt="jobhere">
                         </div>
                         <div class="team-content">
                             <h5>JAEFFRY JOSEPH</h5>
