--- a/templates/jobseeker/index.html.twig
+++ b/templates/jobseeker/index.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
-{% block title %}Skills Farm{% endblock %}
+{% block title %}Skillsfarm{% endblock %}
 {% import _self as macroForm %}
 {% block body %}
     <div class="breadcrumb-banner-area pt-94 pb-85 bg-3">
@@ -168,13 +168,12 @@
                                                         Upload your resume and leave the rest to us to Search a job for
                                                         you ..
                                                     </h6>
-                                                    {# Write a form to upload a CV #}
                                                     <p></p>
                                                     <p></p>
                                                     <p></p>
                                                 </div>
                                                 <div class="button-box">
-                                                    <a href="{{ path('_contactus') }}" class="button button-black">Leave
+                                                    <a href="{{ path('_general') }}" class="button button-black">Leave
                                                         a message</a>
                                                 </div>
                                             </div>
