--- a/templates/custom_pages/corporatetraining.html.twig
+++ b/templates/custom_pages/corporatetraining.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
-{% block title %}Skills Farm{% endblock %}
+{% block title %}Skillsfarm{% endblock %}
 {% block body %}
 
 
