--- a/templates/custom_pages/psychologicalcounseling.html.twig
+++ b/templates/custom_pages/psychologicalcounseling.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
-{% block title %}Skills Farm{% endblock %}
+{% block title %}Skillsfarm{% endblock %}
 {% block body %}
     <div class="breadcrumb-banner-area pt-94 pb-85 bg-3">
         <div class="container">
