--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -8,9 +8,11 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="subscribe-form">
-                        <input type="email" name="email" id="email" placeholder="Enter Your Email.....">
-                        <button>Submit</button>
+                    <img src="/img/loading1.gif" id="notify-loader"
+                         style="width: 100px;height: 73px;display: none;margin-left: 30%;"/>
+                    <div class="subscribe-form" id="notify-span">
+                            <input type="email" name="email" id="email" placeholder="Enter Your Email.....">
+                            <button onclick="submitnotify();">Submit</button>
                     </div>
                 </div>
             </div>
