--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="col-sm-6 col-lg-3">
                 <div class="logo">
-                    <a href="/"><img src="/img/logo-extended.png" style="width: 155px;height: 38px;" alt="JobHere"></a>
+                    <a href="/"><img src="/img/logo375.png" style="width: 160px;height: 40px;" alt="JobHere"></a>
                 </div>
             </div>
             <div class="col-sm-6 col-lg-9">
@@ -99,7 +99,7 @@
                             <a class="modal-view button" href="#" data-toggle="modal"
                                data-target="#register">Register</a>
                             <a class="modal-view button" href="#" data-toggle="modal"
-                               data-target="#productModal">Login</a>
+                               data-target="#login">Login</a>
                         </div>
                     {% endif %}
                 </div>
