--- a/templates/custom_pages/placementservices.html.twig
+++ b/templates/custom_pages/placementservices.html.twig
@@ -9,7 +9,7 @@
                         <h2 class="text-center">Placement Services</h2>
                         <div class="breadcrumb-bar">
                             <ul class="breadcrumb text-center m-0">
-                                <li><a href="index.html">Home</a></li>
+                             <li><a href="/">Home</a></li>
                                 <li>Job Details</li>
                             </ul>
                         </div>
