--- a/templates/forgotpassword.html.twig
+++ b/templates/forgotpassword.html.twig
@@ -1,5 +1,5 @@
 <div id="quickview-login">
-    <div class="modal fade" id="login" tabindex="-1" role="dialog">
+    <div class="modal fade" id="forgotpassword" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -12,21 +12,19 @@
                         <div class="area-title text-center mb-43">
                             <img src="/img/logo375.png" style="width: 300px;height: 75px;" alt="jobhere">
                         </div>
-                        <form action="{{ path('_home') }}" method="post">
+                        <form action="{{ path('_jobseeker_forgotpassword') }}" method="post">
+
                             <div class="form-box">
-                                <input type="text" id="username" class="mb-14"  name="_username" placeholder="Username" required
-                                       value="{% if last_username is defined %}{{ last_username }}{% endif %}"/>
-                                <input type="password" id="password" name="_password" placeholder="Password" required/>
+                                <input type="username" id="username" class="mb-14"  name="username" placeholder="Username" required/>
+                                <input type="email" id="email" class="mb-14"  name="email" placeholder="Enter your email address" required/>
                             </div>
                             <div class="fix ptb-30">
-                                <span class="remember pull-left"><input class="p-0 pull-left" type="checkbox">Remember Me</span>
                                 <span class="pull-right">
-                                           <a class="modal-view button" href="#" data-toggle="modal"
-                                              data-target="#forgotpassword">forgot password</a>
+                                    <a href="/">login?</a>
                                 </span>
                             </div>
                             <div class="text-center">
-                                <button type="submit" class="text-uppercase">Login</button>
+                                <button type="submit" class="text-uppercase">Send Email</button>
                             </div>
                         </form>
                     </div>
@@ -35,6 +33,4 @@
         </div>
     </div>
 </div>
-
-{% include "forgotpassword.html.twig" %}
 <!--End of Login Form-->
