--- a/templates/home/aboutus.html.twig
+++ b/templates/home/aboutus.html.twig
@@ -10,7 +10,7 @@
                         <h2 class="text-center">About Us</h2>
                         <div class="breadcrumb-bar">
                             <ul class="breadcrumb text-center m-0">
-                                <li><a href="index.html">Home</a></li>
+                             <li><a href="/">Home</a></li>
                                 <li>About Us</li>
                             </ul>
                         </div>
