--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -1,11 +1,5 @@
 
 <div id="quickview-register">
-    {% if error is defined %}
-        {% if error is not null %}
-            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
-    {% endif %}
-    <!-- Modal -->
     <div class="modal fade" id="register" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -17,20 +11,19 @@
                 <div class="modal-body">
                     <div class="form-pop-up-content ptb-60 pl-60 pr-60">
                         <div class="area-title text-center mb-43">
-                            <img src="/img/logo-extended.png" style="width: 127px;height: 58px;" alt="jobhere">
+                            <img src="/img/logo375.png" style="width: 300px;height: 75px;" alt="jobhere">
                         </div>
                         <form action="{{ path('_jobseeker_signup') }}" method="post">
                             <div class="form-box box2">
-                                <input type="text" name="firstname" placeholder="First Name" class="mb-14">
-                                <input type="text" name="lastname" placeholder="Last Name">
+                                <input type="text" name="firstname" placeholder="First Name" class="mb-14" required>
+                                <input type="text" name="lastname" placeholder="Last Name"  required>
                             </div>
                             <div class="form-box">
-                                <input type="email" name="email" placeholder="Email" class="mb-14">
-                                <input type="text" name="login" placeholder="Username" class="mb-14">
-                                <input type="password" name="pass" placeholder="Password">
+                                <input type="email" name="email" placeholder="Email" class="mb-14"  required>
+                                <input type="text" name="login" placeholder="Username" class="mb-14"  required>
+                                <input type="password" name="pass" placeholder="Password"  required>
                             </div>
                             <div class="fix ptb-30">
-                                <span class="remember pull-left"><input class="p-0 pull-left" type="checkbox">Remember Me</span>
                             </div>
                             <div class="text-center">
                                 <button type="submit" class="text-uppercase">Submit</button>
